--- a/style.css
+++ b/style.css
@@ -46,3 +46,33 @@ ul li a:hover{
 ul li a:active{
     color: darkblue;
 }
+
+.hero{
+    color: white;
+    margin-top: 150px;
+    margin-left: 60px;
+}
+
+h2{
+    font-size: 60px;
+}
+
+.hero p{
+    word-spacing: 2px;
+    letter-spacing: 1px;
+}
+
+.btn{
+    width: 200px;
+    height: 50px;
+    background-color: white;
+    color: rgb(0, 0, 67);
+    font-weight: bold;
+    padding: 10px;
+    margin-top: 20px;
+    border-radius: 5px;
+    border: none;
+    font-size: 17px;
+    cursor: pointer;
+    box-shadow: 4px 5px 4px rgb(55, 74, 195);
+}
