--- a/style.css
+++ b/style.css
@@ -74,5 +74,14 @@ h2{
     border: none;
     font-size: 17px;
     cursor: pointer;
+}
+
+.btn:hover{
+    transition: 0.4s ease-in;
+    transition: 0.7s ease-out;
     box-shadow: 4px 5px 4px rgb(55, 74, 195);
+}
+
+.icons ion-icon{
+    color: white;
 }
