--- a/style.css
+++ b/style.css
@@ -29,14 +29,13 @@ ul li{
     list-style: none;
     margin-left: 62px;
     margin-top: 27px;
-    font-size: 40px;
+    font-size: 27px;
 }
 
 ul li a{
     text-decoration: none;
     color: white;
     cursor: pointer;
-    transition: 0.5s ease-in-out;
 }
 
 ul li a:hover{
@@ -80,4 +79,13 @@ h2{
     transition: 0.4s ease-in;
     transition: 0.7s ease-out;
     box-shadow: 4px 5px 4px rgb(55, 74, 195);
+}
+
+
+.icons{
+    margin-left: 1002px;
+}
+
+p{
+    font-size: 20px;
 }
