--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    background: rgb(0, 0, 67);
+background-color: black;
 }
 
 .logo{
@@ -43,13 +43,13 @@ ul li a:hover{
 }
 
 ul li a:active{
-    color: darkblue;
+    color: rgb(4, 4, 178);
 }
 
 .hero{
     color: white;
     margin-top: 150px;
-    margin-left: 60px;
+    margin-left: 110px;
 }
 
 h2{
@@ -59,13 +59,14 @@ h2{
 .hero p{
     word-spacing: 2px;
     letter-spacing: 1px;
+    font-style: italic;
 }
 
 .btn{
-    width: 200px;
+    width: 330px;
     height: 50px;
     background-color: white;
-    color: rgb(0, 0, 67);
+    color: rgb(0, 0, 100);
     font-weight: bold;
     padding: 10px;
     margin-top: 20px;
@@ -88,4 +89,33 @@ h2{
 
 p{
     font-size: 20px;
+}
+
+
+.btn2{
+    width: 150px;
+}
+
+.btn2 a{
+    width: 300px;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    border: 2px solid rgb(60, 60, 60);
+    background: transparent;
+    padding: 6px;
+    border-radius: 5px;
+    font-family: sans-serif;
+    font-weight: 500;
+}
+
+.btn2 a:hover{
+    background-color: rgb(4, 4, 178);
+    border: 2px solid white;
+    color: white;
+    transition: 0.6s ease-in-out;
+    box-shadow: 5px 2px 5px rgb(136, 156, 255);
 }
